Fetching new templates